--- a/Makefile.am
+++ b/Makefile.am
@@ -298,7 +298,9 @@ endif
 endif
 endif
 
-src_libzmq_la_LDFLAGS += -export-symbols-regex '^zmq_.*'
+if HAVE_VSCRIPT_COMPLEX
+src_libzmq_la_LDFLAGS += $(VSCRIPT_LDFLAGS),$(srcdir)/src/libzmq.vers
+endif
 
 src_libzmq_la_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) $(LIBUNWIND_CFLAGS)
 src_libzmq_la_CFLAGS = $(CODE_COVERAGE_CFLAGS) $(LIBUNWIND_CFLAGS)
@@ -503,7 +505,8 @@ tests_test_sub_forward_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_sub_forward_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_invalid_rep_SOURCES = tests/test_invalid_rep.cpp
-tests_test_invalid_rep_LDADD = src/libzmq.la
+tests_test_invalid_rep_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_invalid_rep_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_msg_flags_SOURCES = tests/test_msg_flags.cpp
 tests_test_msg_flags_LDADD = src/libzmq.la
@@ -528,7 +531,8 @@ tests_test_term_endpoint_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_term_endpoint_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_srcfd_SOURCES = tests/test_srcfd.cpp
-tests_test_srcfd_LDADD = src/libzmq.la
+tests_test_srcfd_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_srcfd_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_monitor_SOURCES = tests/test_monitor.cpp
 tests_test_monitor_LDADD = src/libzmq.la
@@ -576,7 +580,8 @@ tests_test_ctx_options_SOURCES = tests/test_ctx_options.cpp
 tests_test_ctx_options_LDADD = src/libzmq.la
 
 tests_test_iov_SOURCES = tests/test_iov.cpp
-tests_test_iov_LDADD = src/libzmq.la
+tests_test_iov_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_iov_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_ctx_destroy_SOURCES = tests/test_ctx_destroy.cpp
 tests_test_ctx_destroy_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -631,7 +636,8 @@ tests_test_inproc_connect_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_inproc_connect_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_issue_566_SOURCES = tests/test_issue_566.cpp
-tests_test_issue_566_LDADD = src/libzmq.la
+tests_test_issue_566_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_issue_566_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_proxy_SOURCES = tests/test_proxy.cpp
 tests_test_proxy_LDADD = src/libzmq.la
@@ -653,7 +659,8 @@ tests_test_many_sockets_SOURCES = tests/test_many_sockets.cpp
 tests_test_many_sockets_LDADD = src/libzmq.la
 
 tests_test_diffserv_SOURCES = tests/test_diffserv.cpp
-tests_test_diffserv_LDADD = src/libzmq.la
+tests_test_diffserv_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_diffserv_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_connect_rid_SOURCES = tests/test_connect_rid.cpp
 tests_test_connect_rid_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -664,7 +671,8 @@ tests_test_bind_src_address_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_bind_src_address_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_metadata_SOURCES = tests/test_metadata.cpp
-tests_test_metadata_LDADD = src/libzmq.la
+tests_test_metadata_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_metadata_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_capabilities_SOURCES = tests/test_capabilities.cpp
 tests_test_capabilities_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -703,7 +711,8 @@ tests_test_heartbeats_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_heartbeats_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_stream_exceeds_buffer_SOURCES = tests/test_stream_exceeds_buffer.cpp
-tests_test_stream_exceeds_buffer_LDADD = src/libzmq.la
+tests_test_stream_exceeds_buffer_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_stream_exceeds_buffer_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_pub_invert_matching_SOURCES = tests/test_pub_invert_matching.cpp
 tests_test_pub_invert_matching_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -718,7 +727,8 @@ tests_test_base85_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_base85_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_sodium_SOURCES = tests/test_sodium.cpp
-tests_test_sodium_LDADD = src/libzmq.la
+tests_test_sodium_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_sodium_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_socket_null_SOURCES = tests/test_socket_null.cpp
 tests_test_socket_null_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -783,10 +793,12 @@ test_apps += \
 	tests/test_filter_ipc
 
 tests_test_shutdown_stress_SOURCES = tests/test_shutdown_stress.cpp
-tests_test_shutdown_stress_LDADD = src/libzmq.la
+tests_test_shutdown_stress_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_shutdown_stress_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_ipc_wildcard_SOURCES = tests/test_ipc_wildcard.cpp
-tests_test_ipc_wildcard_LDADD = src/libzmq.la
+tests_test_ipc_wildcard_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_ipc_wildcard_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_pair_ipc_SOURCES = \
 	tests/test_pair_ipc.cpp \
@@ -805,7 +817,8 @@ tests_test_reqrep_ipc_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_reqrep_ipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_timeo_SOURCES = tests/test_timeo.cpp
-tests_test_timeo_LDADD = src/libzmq.la
+tests_test_timeo_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_timeo_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_filter_ipc_SOURCES = tests/test_filter_ipc.cpp
 tests_test_filter_ipc_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -865,7 +878,8 @@ tests_test_router_mandatory_tipc_SOURCES = tests/test_router_mandatory_tipc.cpp
 tests_test_router_mandatory_tipc_LDADD = src/libzmq.la
 
 tests_test_shutdown_stress_tipc_SOURCES = tests/test_shutdown_stress_tipc.cpp
-tests_test_shutdown_stress_tipc_LDADD = src/libzmq.la
+tests_test_shutdown_stress_tipc_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_shutdown_stress_tipc_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_sub_forward_tipc_SOURCES = tests/test_sub_forward_tipc.cpp
 tests_test_sub_forward_tipc_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -945,7 +959,8 @@ tests_test_radio_dish_LDADD = src/libzmq.la ${UNITY_LIBS}
 tests_test_radio_dish_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_scatter_gather_SOURCES = tests/test_scatter_gather.cpp
-tests_test_scatter_gather_LDADD = src/libzmq.la
+tests_test_scatter_gather_LDADD = src/libzmq.la ${UNITY_LIBS}
+tests_test_scatter_gather_CPPFLAGS = ${UNITY_CPPFLAGS}
 
 tests_test_dgram_SOURCES = tests/test_dgram.cpp
 tests_test_dgram_LDADD = src/libzmq.la ${UNITY_LIBS}
@@ -1044,8 +1059,8 @@ EXTRA_DIST = \
 	CMakeLists.txt \
 	autogen.sh	\
 	version.sh	\
-	src/libzmq.pc.cmake.in \
 	ci_build.sh \
+	src/libzmq.vers \
 	src/version.rc.in \
 	tests/CMakeLists.txt \
 	unittests/CMakeLists.txt \
